# dewsro-control

./: .editorconfig  .gitignore  README.md  VSRO_CONTROL.slnx  build_quest_names.py  server_sample.cfg
CoreLib/: CoreLib.csproj
CoreLib/Models/: Event.cs  ReturnedAccessObject.cs  User.cs  VTask.cs
CoreLib/Models/Requests/: LoginRequest.cs  RegisterRequest.cs
CoreLib/Models/Responses/: CommonResponse.cs
CoreLib/Network/: IPTools.cs
CoreLib/Processes/: ProcessTools.cs
CoreLib/Text/: AsciiTools.cs
CoreLib/Tools/Logging/: LogLevel.cs  Logger.cs  LoggerSettings.cs
DdConverter/: DdConverter.csproj  DdConverter.slnx  Program.cs
DewSROCompanion/: settings.gradle.kts
DewSROCompanion/app/: build.gradle.kts
DewSROCompanion/gradle/: libs.versions.toml
DewSROCompanion/gradle/wrapper/: gradle-wrapper.properties
DewSROToolsDLL/: CMakeLists.txt  CMakeSettings.json
DewSROToolsDLL/src/: AppManager.cpp  AppManager.h  Control.cpp  DllMain.cpp  DllMain.h  Settings.h  exports.def
DewSROToolsDLL/src/BSLib/: BSLib.cpp  BSLib.h  CMakeLists.txt  multibyte.h
DewSROToolsDLL/src/BSLib/ClientNet/: ClientNet.cpp  ClientNet.h  MsgStreamBuffer.h
DewSROToolsDLL/src/BSLib/_internal/: _BSMsg.h  custom_stl.h
DewSROToolsDLL/src/BSLib/support/: AbiTest.h
DewSROToolsDLL/src/Interfaces/: PlayerInterface.cpp  PlayerInterface.h
DewSROToolsDLL/src/Logging/: Logger.cpp  Logger.h
DewSROToolsDLL/src/client/: AchievementWindow.cpp  AchievementWindow.h  ClassLink.h  RewardWindow.cpp  RewardWindow.h  SoxOverlay.h
DewSROToolsDLL/src/client/TypeId/: TypeId.h  TypeIdBase.h
DewSROToolsDLL/src/client/data/: CommonData.h
DewSROToolsDLL/src/game/: System.cpp
DewSROToolsDLL/src/hooks/: dx9_hook.cpp  dx9_hook.h  patcher.cpp  patcher.h
DewSROToolsDLL/src/libs/ClientLib/: CMakeLists.txt
DewSROToolsDLL/src/libs/ClientLib/src/: AlramGuideMgrWnd.cpp  AutoPotion.h  CObjAnimation.h  CharacterDependentData.h  CharacterStatistics.h  ClassLink.h  GEffSoundBody.h  GInterface.h  GInterfaceSend.cpp  GInterfaceWndRelation.cpp  GameCfg.h  GlobalDataManager.h  ICMonster.h  ICharactor.h  IFButton.h  IFChatOptionBoard.cpp  IFChatViewer.h  IFExtQuickSlotOption.cpp  IFInventory.h  IFListCtrl.cpp  IFListCtrl.h  IFMainFrame.cpp  IFMainFrame.h  IFMainPopup.cpp  IFMainPopup.h  IFPlayerInfo.cpp  IFScrollBar.cpp  IFScrollBar.h  IFSlotWithHelp.cpp  IFSlotWithHelp.h  IFStatic.cpp  IFStatic.h  IFSystemMessage.cpp  IFSystemMessage.h  IFTargetWindowCommonEnemy.cpp  IFTargetWindowFortressStructure.cpp  IFTargetWindowJobPlayer.cpp  IFTargetWindowPlayer.cpp  IFTargetWindowSpecialMob.cpp  IFTextBox.cpp  (+38 more)
DewSROToolsDLL/src/libs/ClientLib/src/CharDependentData/: GuildData.h  TrainingCampData.h
DewSROToolsDLL/src/libs/ClientLib/src/Data/: CharacterData.h  CommonData.h  ItemData.cpp  ItemData.h  LevelData.h
DewSROToolsDLL/src/libs/JMX/GFX/FM/: CMakeLists.txt
DewSROToolsDLL/src/libs/JMX/GFX/GFX3DFunction/: CMakeLists.txt
DewSROToolsDLL/src/libs/JMX/GFX/GFX3DFunction/src/GFX3DFunction/: GFontTexture.cpp  GFontTexture.h  RStateMgr.h  RTLoading.cpp
DewSROToolsDLL/src/libs/JMX/GFX/GFXMainFrame/: CMakeLists.txt
DewSROToolsDLL/src/libs/JMX/GFX/GFXMainFrame/src/GFXMainFrame/: GWnd.cpp  GWnd.h  GWndBase.cpp  GWndBase.h  IEntity.h  Process.cpp  Process.h
DewSROToolsDLL/src/libs/JMX/SROInterfaceLib/: CMakeLists.txt
DewSROToolsDLL/src/libs/JMX/SROInterfaceLib/src/SRIFLib/: IFSlotWithHelpEx.h  NIFButton.h  NIFCommunityWnd.h  NIFDragableArea.h  NIFFrame.h  NIFGuildWnd.h  NIFMainFrame.h  NIFStatic.h  NIFTileWnd.h  NIFUnderMenuBar.cpp  NIFUnderMenuBar.h  NIFWnd.cpp  NIFWnd.h  NIFWorldMap.h  NInterfaceResource.cpp  NInterfaceResource.h
DewSROToolsDLL/src/libs/MathHelpers/: CMakeLists.txt
DewSROToolsDLL/src/libs/NavMesh/: CMakeLists.txt
DewSROToolsDLL/src/libs/TypeId/: CMakeLists.txt
DewSROToolsDLL/src/libs/TypeId/include/: TypeIdBase.h
DewSROToolsDLL/src/libs/TypeId/src/: TypeIdRegistry.cpp
DewSROToolsDLL/src/mem/: Process.h
DewSROToolsDLL/src/net/: DllBridge.cpp  DllBridge.h  LoginHook.h  NetActions.h
VSRO_CONTROL_API/: Program.cs  VSRO_CONTROL_API.csproj  VSRO_CONTROL_API.http
VSRO_CONTROL_API/Attributes/: RequireAdminAttribute.cs  RequireAuthAttribute.cs
VSRO_CONTROL_API/Controllers/: AccountController.cs  BackupController.cs  CharacterController.cs  ClientController.cs  DatabaseController.cs  EconomyController.cs  LiveController.cs  LogsController.cs  NoticeController.cs  PatchController.cs  PlayersController.cs  PrivilegedIpController.cs  QuestController.cs  ServerCfgController.cs  ServerController.cs  TextdataController.cs  WorldController.cs
VSRO_CONTROL_API/Properties/: launchSettings.json
VSRO_CONTROL_API/Settings/: ApiSettings.cs  BackupSettings.cs  CertSettings.cs  LogSettings.cs  NetworkSettings.cs  PatchingSettings.cs  ProxySettings.cs  SettingsLoader.cs  ach.xml  settings.xml
VSRO_CONTROL_API/Utils/: JwtHelper.cs
VSRO_CONTROL_API/VSRO/: Constant.cs  DBConnect.cs  InviteCodeStore.cs  Overseer.cs
VSRO_CONTROL_API/VSRO/AsynchronousProxy/: AgentTools.cs  PlayerTools.cs
VSRO_CONTROL_API/VSRO/Backup/: DatabaseBackupService.cs
VSRO_CONTROL_API/VSRO/DTO/: CharacterPosition.cs  CharacterSnapshot.cs  ItemRecord.cs  LiveSessionDTO.cs  LoginResponseObject.cs  ModuleStatus.cs  NodeIniValues.cs  NoticeRequest.cs  Party.cs  PetInfo.cs  PlayerSession.cs  PlayerStats.cs  SignupRequest.cs  UniqueKillReward.cs  UserDTO.cs  VSROServerStatus.cs
VSRO_CONTROL_API/VSRO/Enums/: RewardType.cs  TalismanGroup.cs  Town.cs
VSRO_CONTROL_API/VSRO/Patching/: AgentServerPatcher.cs  GameRatePatcher.cs  GameServerPatcher.cs  MachineManagerPatcher.cs
VSRO_CONTROL_API/VSRO/Quest/: QuestParser.cs  TextdataUpdater.cs
VSRO_CONTROL_API/VSRO/ServerCfg/: ServerCfgParser.cs  ServerRates.cs
VSRO_CONTROL_API/VSRO/Settings/: StartupSettings.cs
VSRO_CONTROL_API/VSRO/Tools/: CharacterSnapshotStore.cs  Connection.cs  DllBridge.cs  Encryptor.cs  GameObjectNameResolver.cs  Hash.cs  InventoryTracker.cs  NodeIniHelper.cs  (+2 more)
vsro-panel/: package-lock.json  package.json  vite.config.ts
vsro-panel/src/: app.css  app.html
(+80 files in other folders)
